--- a/TestView.html
+++ b/TestView.html
@@ -8,7 +8,7 @@
         <span id="sai">-</span>
         <div>
             <p>さいころアプリです！</p>
-            <p>saikoro</p>
+            <h1 style="color:red;">テストアプリ</h1>
         </div>  
     </form>
     <script src="sampleJS.js"></script>
