--- a/TestView.html
+++ b/TestView.html
@@ -3,6 +3,10 @@
 </head>
 
 <body>    
+    <h1>
+        <span id="view_time"></span>
+    </h1>
+
     <form>
         <input type="button" value="10面サイコロ" onClick="altRan2()">
         <span id="sai">-</span>
